// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown renders code block 1`] = `
<div
  className="css-1dvqj0j"
>
  <pre
    className="css-h3y5cn"
  >
    <button
      className="css-jen7vt"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onScroll={[Function]}
      placement="top"
      type="button"
    >
      <svg
        className="css-1jsrbro"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#icon-copy"
        />
      </svg>
    </button>
    <div
      className="css-pmzqvx"
    >
      <code
        className="css-rt1r54"
      >
        Code block
      </code>
    </div>
  </pre>
</div>
`;

exports[`Markdown renders code inline 1`] = `
<div
  className="css-1dvqj0j"
>
  <p
    className="css-1hlw7zz"
  >
    <code
      className="css-rt1r54"
    >
      Code line
    </code>
  </p>
</div>
`;

exports[`Markdown renders mixed content 1`] = `
<div
  className="css-1dvqj0j"
>
  <div>
    <h2
      className="css-13lsgy9"
      id="connect-to-tarantool-cartridge-using-python-clienthttpsgithubcomtarantooltarantool-python"
    >
      Connect to Tarantool Cartridge using 
      <a
        className="css-k47rv5"
        href="https://github.com/tarantool/tarantool-python"
        target="_blank"
      >
        python client
      </a>
    </h2>
    <p
      className="css-1hlw7zz"
    >
      First, 
      <strong>
        install
      </strong>
       
      <em>
        tarantool
      </em>
       package using 
      <em>
        pip3
      </em>
      :
    </p>
    <pre
      className="css-h3y5cn"
    >
      <button
        className="css-jen7vt"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="css-1jsrbro"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <div
        className="css-pmzqvx"
      >
        <code
          className="language-bash css-fkp2zu"
        >
          pip3 install tarantool
        </code>
      </div>
    </pre>
    <p
      className="css-1hlw7zz"
    >
      Create a file example.py with the code to get started:
    </p>
    <pre
      className="css-h3y5cn"
    >
      <button
        className="css-jen7vt"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="css-1jsrbro"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <div
        className="css-pmzqvx"
      >
        <code
          className="language-python css-fkp2zu"
        >
          from tarantool import Connection
c = Connection(
    "try-cartridge.tarantool.io", 
    10300, 
    user='admin', 
    password='npngatmwsf'
)
result = c.insert("examples", (333, 'Value', 'Value'))
space = c.space("examples")
results = space.select(333)
print(results)
        </code>
      </div>
    </pre>
    <p
      className="css-1hlw7zz"
    >
      Run the script
    </p>
    <pre
      className="css-h3y5cn"
    >
      <button
        className="css-jen7vt"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="css-1jsrbro"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <div
        className="css-pmzqvx"
      >
        <code
          className="language-bash css-fkp2zu"
        >
          python3 example.py
        </code>
      </div>
    </pre>
  </div>
</div>
`;

exports[`Markdown renders with built-in component overriding 1`] = `
<div
  className="css-1dvqj0j"
>
  <div>
    <h1
      className="css-1nfljoo"
      id="bee-careful"
    >
      Bee careful
    </h1>
    <p
      className="css-1hlw7zz"
    >
      Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
    <blockquote
      className="css-1gmsj2n"
    >
      <p
        className="css-1hlw7zz"
      >
        Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
      </p>
    </blockquote>
    <ul
      className="iAmOverridedComponent"
    >
      <li
        className="css-1tx38fa"
      >
        Create file
      </li>
      <li
        className="css-1tx38fa"
      >
        Rename file
      </li>
      <li
        className="css-1tx38fa"
      >
        Save file
      </li>
    </ul>
  </div>
</div>
`;
